--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-portal": "^4.2.2",
+    "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
