--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "react-tenzies",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "homepage": "https://fancybaguette.github.io/react-tenzies",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
