--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dayjs": "^1.11.7",
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
